fix footer overlap

--- a/app/assets/stylesheets/jplayer_styles.css.scss
+++ b/app/assets/stylesheets/jplayer_styles.css.scss
@@ -230,7 +230,7 @@ p {
   }
 
   footer {
-    font-size: 2.5rem;
+    font-size: 2.0rem;
   }
 
 }
